# TicTacToe

./: .gitignore  CMakeLists.txt  README.md  build.sh  git-update
client/: CMakeLists.txt
client/include/: Client.h  Connection.h  Window.h
client/src/: Client.c  Connection.c  Window.c  main.c
common/: CMakeLists.txt
common/include/: Protocol.h  common.h
common/src/: Protocol.c
judge/: main.py  utils.py
server/: CMakeLists.txt
server/include/: Clients.h  Connection.h  ConnectionZmq.h  List.h  Server.h  Timer.h
server/src/: Clients.c  Connection.c  ConnectionZmq.c  List.c  Server.c  Timer.c  main.c
